fixing section overflow visible

--- a/src/components/LandingPage/OfferSections/styles.scss
+++ b/src/components/LandingPage/OfferSections/styles.scss
@@ -300,26 +300,33 @@
             
         }
     }
-    
-    .svgContainer {
+    div {
         display: flex;
         justify-content: center;
         align-items: center;
         position: relative;
-        width: 100%;
-        margin: 0;
-        top: -1%;
-        .svgDiv {
-            box-shadow: 0 30px 30px 0 rgba(0, 0, 0, 0.75);
-            position: absolute;
-            height: 25550%;
-            width: 130%;
-            left: -15%;
-            border-radius: 0% 0% 50% 50%;
-            background-color: #d7d7d7;
-            z-index: -1;
-        }
+        width: 100vw;
+        .svgContainer {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+            width: 100%;
+            margin: 0;
+            top: -1%;
+            .svgDiv {
+                box-shadow: 0 30px 30px 0 rgba(0, 0, 0, 0.75);
+                position: absolute;
+                height: 25550%;
+                width: 130%;
+                left: -15%;
+                border-radius: 0% 0% 50% 50%;
+                background-color: #d7d7d7;
+                z-index: -1;
+            }
+        }  
     }
+    
 }
 
 
